<resources>
    <string name="app_name">HolynicMobileApp</string>
    <string name="get_started">Get Started</string>
    <string name="hey_there">Hey there,</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="first_name">First Name</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="ask_register">Don’t have an account yet?&#160;</string>
    <string name="ask_login">Already have an account?&#160;</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome, Faiz</string>
    <string name="set">You are all set now, let’s reach your\ngoals together with us</string>
    <string name="gotoh">Go To Home</string>
    <string name="name">Faiz Susanto</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="hospital">Hospital</string>
    <string name="ambulance">Ambulance</string>
    <string name="top_doctor">Top Doctor</string>
    <string name="see_all">See all</string>
    <string name="health_article">Health article</string>
    <string name="parel">Dr. Farel Sadboy</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="fanny">Dr. Fanny Retza</string>
    <string name="psychologist">Psychologist</string>
    <string name="imanuel">Rs. Imanuel Way Halim</string>
    <string name="imanueladdress">Jl. Soekarno Hatta No.1, Way Dadi, Kec.\n Sukarame, Kota Bandar Lampung</string>
    <string name="urip">Rs. Urip Sumoharjo</string>
    <string name="uripaddress">Jl. Urip Sumoharjo No.200, Gn. Sulah, Kec. Way Halim, Kota Bandar Lampung</string>
    <string name="category">Category</string>
    <string name="textgeneral">General</string>
    <string name="textlungs">Lungs Specialist</string>
    <string name="textdentist">Dentist</string>
    <string name="textpsychiatrist">Psychiatrist</string>
    <string name="textcovid">Covid-19</string>
    <string name="textsurgeon">Surgeon</string>
    <string name="textcardiologist">Cardiologist</string>
    <string name="recommended_doctors">Recommended Doctors</string>
    <string name="recent_doctor">Your Recent Doctors</string>
    <string name="firstparel">Dr. Farel</string>
    <string name="firstfanny">Dr. Fanny</string>
    <string name="firstmicu">Dr. Micu</string>
    <string name="firstmuzaki">Dr. Muzaki</string>
    <string name="micu">Dr. Micu Tiere</string>
    <string name="about">About</string>
    <string name="doctordescription">Dokter paling sadboy seunila, udah punya cewe tapi\nmasih aja ngechatin adek tingkat</string>
    <string name="popular_product">Popular Product</string>
    <string name="panadol">Panadol</string>
    <string name="stok1">10pcs</string>
    <string name="price1">Rp 14.000</string>
    <string name="bodrex">Bodrex Herbal</string>
    <string name="stok2">5 Sachet</string>
    <string name="price2">Rp 10.000</string>
    <string name="konidin">Konidin</string>
    <string name="stok3">4pcs</string>
    <string name="price3">Rp 6.000</string>
    <string name="product_onsale">Product On Sale</string>
    <string name="textobh">OBH Combi</string>
    <string name="size1">75ml</string>
    <string name="cross1"><strike> Rp.14.000 </strike> </string>
    <string name="price4">Rp 12.000</string>
    <string name="textbetadine">Betadine</string>
    <string name="size2">30ml</string>
    <string name="cross2"><strike> Rp 25.000 </strike> </string>
    <string name="price5">Rp 21.000</string>
    <string name="textbodrexin">Bodrexin</string>
    <string name="size3">60ml</string>
    <string name="cross3"><strike> Rp 12.000 </strike> </string>
    <string name="price6">Rp 10.000</string>
    <string name="textbreakfast">Hey, it’s time for breakfast</string>
    <string name="notifbreakfast">About 1 minutes ago</string>
    <string name="textsunbathe">Don’t miss your sunbathe</string>
    <string name="notifsunbathe">About 2 hours ago</string>
    <string name="textlunch">Hey, it’s time for lunch</string>
    <string name="notiflunch">About 14 hours ago</string>
    <string name="textdinner">Hey, it’s time for dinner</string>
    <string name="notifdinner">20 March</string>
    <string name="textdiet">Diet</string>
    <string name="textfitness">Fitness</string>
    <string name="popular_article">Popular Articles</string>
    <string name="textnutrition">Nutrition</string>
    <string name="trending_article">Trending Article</string>
    <string name="news1">Comparing the\nAstraZeneca and\nSinovac COVID-19\nVaccines</string>
    <string name="date1">Feb 22, 2023&#160;.&#160;</string>
    <string name="min6"> 6 min read</string>
    <string name="news2">The Horror Of The\nSecond Wave Of\nCOVID-19</string>
    <string name="date2">Feb 25, 2023&#160;.&#160;</string>
    <string name="news3">Comparing the\nAstraZeneca and\nSinovac COVID-19\nVaccines</string>
    <string name="date3">Feb 28, 2023&#160;.&#160;</string>
    <string name="related_articles">Related Articles</string>
    <string name="news4">The 25 Healthiest Fruits You Can\nEat, According to a Nutritionist</string>
    <string name="date4">Mar 10, 2023&#160;.&#160;</string>
    <string name="min5">5 min read</string>
    <string name="news5">Traditional Herbal Medicine\nTreatments for COVID-19</string>
    <string name="date5">Mar 5, 2023&#160;.&#160;</string>
    <string name="min8">8 min read</string>
    <string name="news6">Beauty Tips For Face: 10 Dos and\nDon\'ts for Naturally Beautiful Skin</string>
    <string name="date6">Mar 2, 2023&#160;.&#160;</string>
    <string name="orthopedist">Orthopedist</string>
    <string name="password">Password</string>
    <string name="forgotpassword"><u>Forgot your password?</u></string>
    <string name="forgotpass">Forgot password?</string>
    <string name="descForgot">Enter your registered email below\nto receive password reset verification</string>
    <string name="btnForgot">Next</string>
</resources>