<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterPage">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_firstname_reg"
        android:drawableStart="@drawable/register1"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/edt_lastName_reg"
        android:drawableLeft="@drawable/register1"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:inputType="textPersonName"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"
        android:hint="Last Name" />

    <EditText
        android:id="@+id/edt_email_reg"
        android:drawableLeft="@drawable/register3"
        android:drawablePadding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textPersonName"
        android:hint="Email" />

    <EditText
        android:id="@+id/edt_password_reg"
        android:drawableLeft="@drawable/register2"
        android:drawablePadding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"
        android:hint="@string/password"
        />
    <EditText
        android:id="@+id/edt_confirmPassword_reg"
        android:drawableLeft="@drawable/register2"
        android:drawablePadding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"
        android:hint="@string/password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginStart="3dp"
        android:textSize="10sp"
        android:textColor="#ADA4A5"
        android:layout_marginTop="8dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:background="@drawable/round_btn"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/or"
        android:gravity="center"
        android:textSize="12sp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_login"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="9dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="14sp"
                android:textColor="@color/color_1"
                android:paddingTop="8dp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>