<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:orientation="vertical"
    tools:context=".ForgotPassword">



    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:id="@+id/descForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descForgot"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular" />


    <EditText
        android:id="@+id/edt_email"
        android:drawableLeft="@drawable/register3"
        android:drawablePadding="@dimen/fragment_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:background="@drawable/border_image"
        android:padding="15dp"
        android:hint="Email" />

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/btnForgot"
        android:background="@drawable/round_btn"
        />

</LinearLayout>