<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".DetailDoctor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/border_image"
        >
        <ImageButton
            android:id="@+id/doctorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list1"
            android:background="@color/white"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"

            >
            <TextView
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parel"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingTop="15dp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:id="@+id/specialist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cardiologist"
                android:textColor="@color/gray_2"
                android:textSize="12sp"/>
            <ImageView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="126dp"
                android:paddingTop="8dp"
                android:src="@drawable/rating"/>
            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="86dp"
                android:paddingTop="8dp"
                android:src="@drawable/location"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/doctorname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/about"
        android:textColor="@color/black"
        android:paddingLeft="18dp"
        android:paddingTop="5dp"
        android:textSize="16sp"/>
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/doctordescription"
            android:paddingLeft="18dp"
            android:justificationMode="inter_word"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:textColor="@color/gray_4"
            android:textSize="12sp"/>
    </LinearLayout>
</ScrollView>