<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".NotificationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <ImageButton
                android:id="@+id/notif1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mata_sapi"
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="15dp"
                android:paddingBottom="7dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                >
                <TextView
                    android:id="@+id/textbreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textbreakfast"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:paddingTop="15dp"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/notifbreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notifbreakfast"
                    android:textColor="@color/gray_1"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:background="@color/white"
            android:paddingBottom="7dp"
            android:paddingLeft="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <ImageButton
                android:id="@+id/sunbathe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sunbathe"
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="15dp"
                android:paddingBottom="7dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                >
                <TextView
                    android:id="@+id/textsunbathe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textsunbathe"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:paddingTop="15dp"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/notifsunbathe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notifsunbathe"
                    android:textColor="@color/gray_1"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:background="@color/white"
            android:paddingBottom="7dp"
            android:paddingLeft="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <ImageButton
                android:id="@+id/lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lunch"
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="15dp"
                android:paddingBottom="7dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                >
                <TextView
                    android:id="@+id/textlunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textlunch"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:paddingTop="15dp"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/notiflunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notiflunch"
                    android:textColor="@color/gray_1"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:background="@color/white"
            android:paddingBottom="7dp"
            android:paddingLeft="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <ImageButton
                android:id="@+id/dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dinner"
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="15dp"
                android:paddingBottom="7dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                >
                <TextView
                    android:id="@+id/textdinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textdinner"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:paddingTop="15dp"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/notifdinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notifdinner"
                    android:textColor="@color/gray_1"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:background="@color/white"
            android:paddingBottom="7dp"
            android:paddingLeft="30dp"
            />
    </LinearLayout>
</ScrollView>